--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,5 +17,8 @@ jobs:
           distribution: 'adopt'
           cache: gradle
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
+
       - name: Build app
-        run: ./gradlew assemble
+        run: ./gradlew build
