--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,11 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '11'
-          distribution: 'adopt'
+          distribution: 'temurin'
           cache: gradle
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x ./gradlew
-
-      - name: Build app
-        run: ./gradlew build
+      - name: Build App with Gradle
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: 7.3.0
+          arguments: build
