--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,10 @@ jobs:
           distribution: 'temurin'
           cache: gradle
 
-      - name: Build App with Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          gradle-version: '7.3.0'
-          arguments: build
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
+
+      - name: Build app
+        run: |
+          ./gradlew wrapper --gradle-version=7.3.0
+          ./gradlew build
