--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,5 +22,5 @@ jobs:
 
       - name: Build app
         run: |
-          ./gradlew wrapper --gradle-version=7.3.0
+          ./gradlew wrapper --gradle-version=8.0-rc-1
           ./gradlew build
