--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Build CI
 
 on: [ push ]
 
@@ -14,11 +14,16 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '11'
-          distribution: 'temurin'
+          distribution: 'adopt'
           cache: gradle
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
+
+      - name: Prepare build for iOS
+        run: |
+          ./gradlew wrapper --gradle-version=8.0-rc-1
+          ./gradlew :shared:embedAndSignPodAppleFrameworkForXcode
 
       - name: Build app
         run: |
