--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,5 +24,7 @@ jobs:
       - name: Make gradle executable
         run: chmod +x ./gradlew
 
-      - name: Build with gradle
-        run: ./gradlew build --stacktrace --no-daemon
+      - name: Build app with Gradle
+          run: |
+            ./gradlew wrapper --gradle-version=8.0-rc-1
+            ./gradlew build --stacktrace --no-daemon
