update: upgrade gradle build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Set up gradle version
-        run: ./gradlew wrapper --gradle-version=8.0-rc-1
+        run: ./gradlew wrapper --gradle-version=8.0.2
 
       - name: Build app with Gradle
         run: ./gradlew :shared:build --stacktrace --no-daemon
