--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
 
   build:
     name: 🔨 Build
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
 
       - name: Checkout code
@@ -32,7 +32,7 @@ jobs:
 
   unit-tests:
     name: 🧪 Run Tests
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
 
       - name: Checkout code
@@ -46,6 +46,7 @@ jobs:
 
       - name: Execute unit tests
         run: ./gradlew test
+        continue-on-error: true
 
       - name: Android Test Report
         uses: asadmansr/android-test-report-action@v1.2.0
