--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
         run: ./gradlew wrapper --gradle-version=8.0.2
 
       - name: Build app with Gradle
-        run: ./gradlew :shared:build --stacktrace --no-daemon
+        run: ./gradlew assemble --stacktrace --no-daemon
 
   unit-tests:
     name: 🧪 Run Tests
@@ -38,6 +38,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: 11
+          distribution: 'temurin'
+
       - name: Make gradle executable
         run: chmod +x ./gradlew
 
@@ -45,9 +51,5 @@ jobs:
         run: ./gradlew wrapper --gradle-version=8.0.2
 
       - name: Execute unit tests
-        run: ./gradlew test
+        run: ./gradlew test --stacktrace
         continue-on-error: true
-
-      - name: Android Test Report
-        uses: asadmansr/android-test-report-action@v1.2.0
-        if: ${{ always() }}
